update BoardHeader.module.css and tasks-header.module.css fix task header z-index

--- a/client/src/styles/components/boards/BoardHeader.module.css
+++ b/client/src/styles/components/boards/BoardHeader.module.css
@@ -12,7 +12,7 @@
     background-color: var(--secondary-background-color);
     /* border-left: 2px solid var(--border-color); */
     width: 100%;
-    z-index: 2000;
+    z-index: 1003;
     flex-wrap: wrap;
     padding: 12px;
 }
